--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
        <img src="niceview.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
      </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Our first assignment in which we reviewed the basics of coding by creating a simple website through which we described who we are, our academic and professional aspirations, and our goals for this course.</p>
     </div>
        <div class="col-sm-4">
         <h3>New Media Webtext Experiment</h3>
@@ -41,7 +41,7 @@
        <img src="cathy.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
      </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Our second assignment in which we experimented with coding by creating a more complex website on whichever topic or format we desired, learning new skills and techniques in the process.</p>
     </div>
     <div class="col-sm-4">
         <h3>Non-Linear Website Experiment</h3>
@@ -50,50 +50,34 @@
        <img src="hospital.jpg" class="img-responsive" style="width:100%"alt="Image" >
               </div>
      </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Our third assignment in which we explored non-linear website creation through use of buttons that link to associated files. My project was inspired by Plato's "Allegory of the Cave."</p>
     </div>
   </div>
-</div>
-
-
 
 
 
     <div class="container-fluid bg-w text-center">
  <h3 class="margin">Phase 1 Course Goals</h3>
         <br>
+           <p><em>1. Foster the creative habits of mind</em></p>
+  <p>My projects helped foster creative habits of the mind by encouraging me to learn something new. Not only did I learn a skill entirely new to me — how to create a web file through coding — but I was also encouraged to experiment with different modes of creation. I used examples given to us by both the professor and peers to consider what skills I wanted to learn in order to create something unique, playing around with different formatting techniques involving various fonts, colors, and animations. I formed an image in my mind of what I wanted my projects to look like, then learned coding skills both in and out of class to bring these concepts to life. I've learned first-hand that coding can be a creative outlet through which one can express personal ideas, passions, and experimentation. At first, I was somewhat frustrated with our assignments, for I struggled to learn the process of coding and adapt to the languages of HTML and CSS. By our third project, however, I found myself researching more ways to branch off the provided formats because I was having fun devising new ways to make my sites unique, enjoying the satisfaction of creating something new that had seemed, prior to this class, beyond my capabilities.</p>
 
-    <div class="row">
-    <div class="col-sm-4">
-           <p>1. Foster the creative habits of mind</p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-            <div class="col-sm-4">
-        <p><em>2. Engage with others in a workshop environment.</em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-          <div class="col-sm-4">
-        <p><em>3.	Think deeply about craft. </em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-    </div>
-    </div>
+    <div class="container-fluid bg-w text-center">
+        <p><em>2. Engage with others in a workshop environment</em></p>
+  <p>In any academic and professional setting, engaging with others in a workshop environment is a crucial and useful skill. In this class, specifically, our workshops created multiple opportunities for engaged pedagogy and shared growth. By presenting my projects to both my professor and peers, I got an idea of how my work was perceived as well as how I felt when other people viewed it. I learned when I did, and didn't, feel satisfied with my work by allowing the judgement of others, from which I was given useful feedback that helped guide me in new directions. In addition, watching others present their work gave me further insight into the realm of coding. By viewing the creative work of my peers, I gained new ideas of how to play around with code and turn my projects into something unique. I would notice a certain aspect of another's project, maybe a colored background or an animated text, and was thus encouraged to challenge myself the way my peers had challenged themselves, to work away from the simple formats towards something more difficult, yet far more satisfying.</p>
+
+    <div class="container-fluid bg-w text-center">
+        <p><em>3.	Think deeply about craft </em></p>
+  <p>After completing only three assignments, this course has taught me an entirely new craft: how to create a website through coding. At first, I simply wanted to complete our assignments as efficiently as possible and then move on with other tasks, projects, and activities. Soon, however, I found myself honing in on these assignments for the sake of learning the craft itself — that is, learning how to code. In class, watching my peers present their own work, I considered the complexity of coding and the vast opportunities open to us through the practice of coding. I'll admit, I envied some of my peers for the ease with which they'd mastered the craft, and was inspired to use them and their work as examples to go off of. I was fascinated by the idea that a complex site, with various moving parts and a seamless layout and layered images, could be created so (seemingly) easily by a student just like me. Our course has enabled me to create something new and unique that I can call my own. There is something both challening and rewarding in creating a web file through code, and I am excited to continue doing so as I expand my knowledge on coding throughout this course and in later, personal projects.</p>
 
        <div class="container-fluid bg-w text-center">
-   <div class="row">
-    <div class="col-sm-2">
-       </div>
-    <div class="col-sm-4">
-        <p><em>4. Engage in sustained research and skills development. </em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-            <div class="col-sm-4">
+        <p><em>4. Engage in sustained research and skills development</em></p>
+  <p>At the start of this course, I saw coding as an alien subject, some mystical skill that seemed out of my reach. I sooned learned that the skills and techniques necessary to create a unique website were very accessible, I just needed to take the time and energy to learn them. I was able to learn the basics by following the instructions outlined in the code of the first assignment. By the second and third, however, I was expanding on this knowledge through additional research. In order to improve my skills, I set up a zoom session with <a href="https://davidholcer.github.io/" target="_blank">a friend who tutors in coding</a> who walked me through both HTML and CSS, helping to improve my understanding of the code languages while also encouraging me to engage in personal research, showing me how I could find infinite examples of text fonts, animations, and buttons online to mimic and insert into my own code. With this newfound knowledge that I could, literally, teach myself to code, I engaged in sustained research that went beyond the minimum requirements in order to expand and improve my skills. By way of illustration, I was revising our New Media Webtext Experiment in Hillman earlier this week with the intention of fixing up some minor issues and improving my formatting. Soon, however, I realized that I'd finished these small tasks to spend several hours watching videos explaing the ins-and-outs of CSS, reviewing a variety of animated fonts — which I had tried, and failed, to insert within my own work — and experimenting with animated texts. Our projects have not merely engaged my mind by completing the assignments, but also by encouraging me to expand on these assignments for the sake of learning more, adding additional skills to my personal toolbox.</p>
+
+  <div class="container-fluid bg-w text-center">
         <p><em>5. Learn to present your work</em></p>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Growing up, I was always the student who never spoke, who struggled to participate outwardly in class conversations, and who felt like throwing up every time I had to give a presentation. Throughout my time in college, I have vastly improved my public speaking skills, but am still very nervous to present my work to my peers. Thus far, this course has helped me share my work without fear of judgement from my peers. While I've felt, at times, as if my projects did not come close in creativity or complexity to those of my peers, our in-class presentations have provided me with a number of beneficial skills. They have helped me prepare myself to present before class both literally and mentally, have challenged me to consider when I am and am not proud of my work and why, and have improved my ability to maintain confidence while sharing my work. While presenting is scary, especially within an area of academia with which you have little knowledge, this class has helped ease this fear through mutual understanding that we are all learning, experimenting, and unsure of what we are really supposed to be doing — even those who seem so self-assured. As a result, I have, without a doubt, improved upon my ability to present in an academic setting.</p>
         </div>
- <div class="col-sm-2">
-       </div>
-</div>
     </div>
 
 
@@ -102,7 +86,7 @@
   <h1>Phase 2: Expository Documentaries</h1><br>
   <div class="row">
     <div class="col-sm-4">
-        <h3>Title</h3>
+        <h3>TBA</h3>
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
          <div class="hover">
        <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
@@ -112,7 +96,7 @@
     </div>
 
      <div class="col-sm-4">
-        <h3>Title</h3>
+        <h3>TBA</h3>
           <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
          <div class="hover">
        <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
@@ -122,7 +106,7 @@
     </div>
 
     <div class="col-sm-4">
-       <h3>Title</h3>
+       <h3>TBA</h3>
          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
         <div class="hover">
       <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
