--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <p><em>5. Learn to present your work</em></p>
   <p>Growing up, I was always the student who never spoke, who struggled to participate outwardly in class conversations, and who felt like throwing up every time I had to give a presentation. Throughout my time in college, I have vastly improved my public speaking skills, but am still very nervous to present my work to my peers. Thus far, this course has helped me share my work without fear of judgement from my peers. While I've felt, at times, as if my projects did not come close in creativity or complexity to those of my peers, our in-class presentations have provided me with a number of beneficial skills. They have helped me prepare myself to present before class both literally and mentally, have challenged me to consider when I am and am not proud of my work and why, and have improved my ability to maintain confidence while sharing my work. While presenting is scary, especially within an area of academia with which you have little knowledge, this class has helped ease this fear through mutual understanding that we are all learning, experimenting, and unsure of what we are really supposed to be doing — even those who seem so self-assured. As a result, I have, without a doubt, improved upon my ability to present in an academic setting.</p>
         </div>
-  
+
 
 
   <div class="container-fluid bg-b text-center">
@@ -131,7 +131,7 @@
 
           <div class="col-sm-4">
              <h3>Adobe After Effects Animation</h3>
-               <a class="portfolio-link" data-toggle="modal" href="#portfolioModal2">
+               <a class="portfolio-link" data-toggle="modal" href="aftereffect.gif">
               <div class="hover">
           <img src="aftereffect.gif" alt="After Effects Factory Farming Gif" style="width:100%">
                    </div>
@@ -173,48 +173,64 @@
 
 
     <div class="container-fluid bg-b text-center">
-  <h1>Phase 4: Interactive Installation</h1><br>
-  <div class="row">
-    <div class="col-sm-6">
-        <h3>Title</h3>
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal9">
-         <div class="hover">
-       <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
-              </div>
-     </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+    <h1>Phase 4: Interactive Installation</h1><br>
+    <div class="row">
+      <div class="col-sm-4">
+          <h3>Multi-Media Presentation</h3>
+            <a class="portfolio-link" data-toggle="modal" href="https://docs.google.com/presentation/d/1kpR-9BWHeCfs-Gcgm9Wgoc3R6RlLGOVYIJBg6be7Z98/edit?usp=sharing">
+           <div class="hover">
+         <img src="presentation.jpg" class="img-responsive" style="width:100%"alt="Image">
+                </div>
+       </a>
+          <p>Our multi-media presentation in which we shared our research, methods, and plan for our final projects. Mine is in the format of a Google Slides presentation.</p>
+      </div>
 
-     <div class="col-sm-6">
-        <h3>Title</h3>
-          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal10">
-         <div class="hover">
-       <img src="steve.jpeg" class="img-responsive" style="width:100%"alt="Image" >
-              </div>
-     </a>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    </div>
+       <div class="col-sm-4">
+          <h3>Interactive Kiosk</h3>
+            <a class="portfolio-link" data-toggle="modal" href="https://sjl88.github.io/Final-Project/ ">
+           <div class="hover">
+         <img src="finalproject.jpg" class="img-responsive" style="width:100%"alt="Image" >
+                </div>
+       </a>
+          <p>Our final project in which we presented a topic of interest, in the form of a digital narrative, to be used on an interactive kiosk. My project centered on factory factory, encouraging my audience to take action against this problematic institution.</p>
+      </div>
 
-  </div>
-</div>
+      <div class="col-sm-4">
+         <h3>Infographic Poster</h3>
+           <a class="portfolio-link" data-toggle="modal" href="https://docs.google.com/drawings/d/13lubKnVNp44BKh16qL46csPg66hn_RwePGwp8iOjWwE/edit?usp=sharing">
+          <div class="hover">
+        <img src="poster.jpg" class="img-responsive" style="width:100%"alt="Image" >
+               </div>
+      </a>
+         <p>The infographic poster accompanying my interactive kiosk. This acts poster increases accessibility by offering an alternate method of interaction that brings users to additional resources through a QR code.</p>
+     </div>
+
 
 
  <div class="container-fluid bg-b text-center">
   <h3>Phase 3/4 Course Goals</h3> <br>
-  <h4><em>1.	Foster the creative habits of mind</em></h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <h4><em>1. Foster the creative habits of mind</em></h4>
+  <p>Throughout our final unit, I have fostered the creative habits of the mind by using my newfound knowledge of coding to create something new and exciting that I am passionate about. Over the summer, I completed an internship with an advocacy group called the Factory Farming Awareness Coalition. In this program, I learned a lot about factory farming, the problematic institutions this issue is rooted in, and how to become an advocate for a more sustainable and just food system. When you told us, months ago, that we would be creating an interactive kiosk that had the opportunity to go public, I knew right away what I wanted mine to be about. I’ve used my passion for this issue, coupled with my newfound knowledge of HTML and CSS, to create something that is both interesting and informative. In completing this project, I considered the variety of skills and tools learned in this class and how best I could use my skillset to tell an effective story. I used the different topics and platforms we covered throughout the course to devise a project plan, expanding beyond the mere coding aspect of the kiosk and incorporating other creative modes of communication. Some of these included my photo essay, my interview expository, an interactive form, and a tangible poster. Overall, I feel confident in saying that my work demonstrates a creative adaptation of a topic I feel strongly about, and that I hope other people may feel strongly about after interacting with my work. I had an idea of what I wanted to do, carried it out, incorporated ideas from peers and past projects, made changes, kept editing, and ended up with something I still can’t believe I get to call my own.
+  </p>
      <br>
         <h4><em>2. Engage with others in a workshop environment</em></h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>I’ve recognized how, in our small, tight-knit class, we all come from different backgrounds. We have different interests and specialties, we are often in very different programs of study. Some of us had outside experience in coding and adobe, some (like myself) never used them before. All of us, some way or another, chose to be in this class. We may have different reasons — some need an elective credit, others need it for their major — but what we have in common is that we all chose to be here, and we’ve all learned something. Keeping these differences and similarities in mind, this course has taught me several lessons about engaging with others in a workshop environment. For one, it taught me to value the ideas and thoughts of my peers. When Heather, for example, showed us how she was going to incorporate prior projects into her kiosk, I considered the how I would use my past work to add to my project, and whether this would be similar to Heather’s. Working with others from a variety of backgrounds means having access to a variety of perspectives and ideas. From incorporating peer feedback to adopting aspects of other's works, I’ve learned that great ideas often — if anything, normally — come from other people. In addition, it taught me to respect the growth of my peers, as well as that of myself. When I began this course, I felt as if I was too lost and frustrated to really learn something, and that my peers were way ahead of the game. Over time, however, as I engaged with our course material and saw my peers do the same, I saw our mutual growth. I realized that comparing my progress to that of my peers was an unfair comparison, and it was better to simply appreciate how we each had grown. While my peers were often ahead of me in terms of knowledge, we were normally at the same place in terms of progress. We each started with some set of knowledge, had a vision we wanted to turn into a reality, struggled to do this, and then found some way in the end. This has helped me better appreciate my own growth, knowing that my peers have undergone those same obstacles and hardships that I have too. I would also like to think that discussing my struggles and progress has helped my peers feel less lost, and more confident in their growth, as well.
+  </p>
+
+<p>Another note: in my first year at Pitt, I read a chapter from bell hooks’ Teaching to Transgress called <a href=https://www.csub.edu/~mault/hooks1.pdf>“Engaged Pedagogy.”</a> This describes the idea that students and teachers are meant to lean on each other and learn from each other's ideas, as a diverse group of individual thinkers, so that they can help each other learn and achieve some meaningful growth. I’ve taken the thought of this, and how well it rings true, with me throughout my college experience, and I feel that your course exemplifies this idea. Thank you.
+</p>
       <br>
         <h4><em>3.	Think deeply about craft</em></h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>Phase 4 of this course has been largely focused on creating a digital narrative through interactive mediums, all centered around a touch-screen kiosk. I’ve created an engaging story by incorporating a variety of knowledge, skills, and practices learned, experimented with, and refined throughout this course. This entails combining many of the different digital platforms we’ve used throughout the semester, such as HTML, CSS, and Adobe Premiere Pro, to create a cohesive narrative about an important issue. It has further entailed examining how these platforms can be used to effectively communicate my issue, so that people will want to engage with it and learn something. I’ve considered, in great detail, how to effectively communicate this issue using the tools available to me. I’d like to think that the craft behind my interactive kiosk isn’t merely the code itself, but also my method of communication. Telling someone about a topic that they likely don’t want to hear about, and then convincing them to do something about it, is a hard task. This project has encouraged me to think deeply about how to accomplish this task by using effective communication strategies through engaging mediums. In pursuing this goal, I incorporated a variety of communicative methods that would enable me to tell my audience of this issue, convince them of its importance, and encourage them to make a change in their lives without being too vague or too demanding. I focused on the “how” rather than the “what” of communication by encouraging self-reflection through a Google form, providing mutual support by displaying the thoughts of other individuals, and using a visually-appealing and accessible format — a website as well as a poster — that would attract the attention of my viewers. As a result, I was able to effectively communicate a rather touchy subject in order to teach my audience of its importance and encourage them to make a change.
+  </p>
       <br>
         <h4><em>4. 4.	Engage in sustained research and skills development</em></h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>A crucial lesson I’ve taken from this course is that in order to develop your skills and learn something new, you must conduct research and find relevant resources to go off of. In creating the code for my interactive kiosk, I relied heavily on past precedent as well as novel elements found through course resources and personal research. I began this project by simply copying my code from our non-linear experiment, then personalizing this code by inserting content relevant to this project. I expanded upon this by using the interactive design principles and relevant guidelines offered by you and some online resources to help with formatting and inserting accessible tools. One of my favorite elements is the buttons I copied from a relevant site on CSS code. After incorporating these buttons into my code, I expanded on this by using my knowledge of CSS to experiment with colors, next using the same colors in my menu bar to create an overarching aesthetic. I considered what was needed to create a successful digital narrative, and then an accessible design, and found the resources to do so. As a result, I feel that my project demonstrates great growth throughout this semester as a whole. Starting with zero knowledge in code, I used sustained research and skill development to create something entirely new to me. I am very happy with my progress in this course, excited to add “Introductory knowledge of HTML, CSS, and Adobe” to my resume, and incredibly proud of my final project. Even now, after the due date for this project has passed, I have a list of edits I would like to make to my code because I want it to be the best that it can be, and because I want it to be put to practical use.
+  </p>
       <br>
             <h4><em>5. Learn to present your work</em></h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+  <p>I feel that the goal of learning to present your work rings truer in this unit than in any other. At this point in the semester, I’ve learned how to share my work with my peers. I’ve learned that sharing work is a valuable thing in how it provides us with peer feedback, the ability to see how confident we are in our work, and simply how to package and communicate your work to someone else. In this unit, I've also learned that presenting my work doesn’t always entail a literal presentation — it also entails placing your work into an easily communicable format that is accessible as well as engaging. Our final projects have been built upon Norman’s “Interactive Design Principles” in that they should follow a conceptual model that enables our audience to understand the purpose and workings of our design, affordances and constraints that determine how our audience can or cannot engage with our design, signifiers that communicate the interactive elements of our design, mappings that correspond to the form or function of our design, and feedback on our audience’s reaction to our design and the information presented. I did my best to incorporate these principles into my final project, though I know there is room for improvement and there are several changes that need to be made, such as external pages and vertical scrolls. Still, I feel confident in my ability to take these lessons with me and apply them to future works, keeping these elements in mind and visualizing how the average person, or even not-so-average person, would interact with my design should I not be there to walk them through it. Either way, not only am I content in my ability to create, package, and present an interactive kiosk, but I am also confident in showing this skill to others, incorporating it into an easily accessible format, and putting it to practical use.
+  </p>
     </div>
      <br>
 
